--- a/AZ-104-2023/lp02.md
+++ b/AZ-104-2023/lp02.md
@@ -19,9 +19,13 @@
     - 管理グループ
     - サブスクリプション
     - リソースグループ
-    - タグ
     - ロック
     - ロールベースのアクセス制御(Azure RBAC)
     - Azure ポリシー
+  - タグ
+  - カスタムロールの定義
+  - ポリシーによるタグの操作
+    - リソースグループからタグを継承する
+    - タグ付けを強制する
   - [ラボ2a: サブスクリプションと RBAC を管理する](lab02a.md)
   - [ラボ2b: Azure Policy を介してガバナンスを管理する](lab02b.md)
