--- a/AZ-104-2023/lp05.md
+++ b/AZ-104-2023/lp05.md
@@ -9,8 +9,12 @@
   - Azure Virtual Network ピアリングを構成する
   - [ラボ4: バーチャル ネットワークを実装する](lab04.md)
   - [ラボ5: サイト間の接続性 を実装する](lab05.md)
-  - ネットワーク ルーティングとエンドポイントを構成する
   - Azure Firewall を構成する
 - オンプレミスとの接続
   - Azure VPN Gateway を構成する
   - Azure ExpressRoute や Virtual WAN を構成する
+- ルーティング/負荷分散
+  - ネットワーク ルーティングとエンドポイントを構成する
+  - Azure Load Balancer
+  - Azure Application Gateway
+  - [ラボ6: トラフィック管理を実装する](lab06.md)
