--- a/AZ-104-2023/lp04.md
+++ b/AZ-104-2023/lp04.md
@@ -5,10 +5,10 @@
 ## 仮想マシン
 
 - 仮想マシン
-  - 仮想マシンの構成
-  - 仮想マシンの可用性を構成する
-  - 仮想マシン拡張機能を構成する
-  - 仮想マシンスケールセット
+  - [PDF資料: 仮想マシンと仮想マシンスケールセット](pdf/vm%E3%81%A8vmss.pdf)
+  - [PDF資料: 可用性ゾーンと可用性セット](pdf/%E5%8F%AF%E7%94%A8%E6%80%A7%E3%82%BE%E3%83%BC%E3%83%B3%E3%83%BB%E5%8F%AF%E7%94%A8%E6%80%A7%E3%82%BB%E3%83%83%E3%83%88.pdf)
+  - 講師デモ
+    - 仮想マシン拡張機能を構成する
   - [ラボ8: 仮想マシンの管理](lab08.md)
 
 ## PaaS
