--- a/AZ-104-2023/lp04.md
+++ b/AZ-104-2023/lp04.md
@@ -14,13 +14,12 @@
 ## PaaS
 
 - PaaS
-  - Azure App Service
-  - ラボ9a: Web Apps の実装
+  - [PDF資料: Azure App Service](pdf/Azure%20App%20Service.pdf)
+  - [ラボ9a: Web Apps の実装](lab09a.md)
 
 ## コンテナー
 
-- Azure Container Instances
-- Azure Kubernetes Service
-- Azure Container Registry
+- [Azure Container Instances](../AZ-204/mod05-05-aci.md)
+- [PDF資料: Azure Kubernetes Service](../AZ-303/pdf/mod13/AKS%E3%82%AF%E3%83%A9%E3%82%B9%E3%82%BF%E3%83%BC%E3%81%AE%E4%BD%9C%E6%88%90.pdf)
 - ラボ9b: Azure Container Instancesの実装
 - ラボ9c: Azure Kubernetes Service を実装する
