--- a/AZ-104-2023/lp04.md
+++ b/AZ-104-2023/lp04.md
@@ -19,7 +19,6 @@
 
 ## コンテナー
 
-- [Azure Container Instances](../AZ-204/mod05-05-aci.md)
-- [PDF資料: Azure Kubernetes Service](../AZ-303/pdf/mod13/AKS%E3%82%AF%E3%83%A9%E3%82%B9%E3%82%BF%E3%83%BC%E3%81%AE%E4%BD%9C%E6%88%90.pdf)
-- ラボ9b: Azure Container Instancesの実装
-- ラボ9c: Azure Kubernetes Service を実装する
+- [PDF資料: コンテナーのサービス](pdf/%E3%82%B3%E3%83%B3%E3%83%86%E3%83%8A%E3%83%BC%E3%81%AE%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9.pdf)
+- [ラボ9b: Azure Container Instancesの実装](lab09b.md)
+- [ラボ9c: Azure Kubernetes Service を実装する](lab09c.md)
