--- a/AZ-104-2023/lp06.md
+++ b/AZ-104-2023/lp06.md
@@ -2,11 +2,16 @@
 
 # ラーニングパス6
 
-- ファイルとフォルダーのバックアップを構成する
-- 仮想マシンのバックアップを構成する
+## バックアップ
+
+- PDF資料: [バックアップセンター](../AZ-305/pdf/Azure%20Backup.pdf)
+- PDF資料: [Azureのバックアップ](../AZ-104/pdf/mod10/%E3%83%87%E3%83%BC%E3%82%BF%E4%BF%9D%E8%AD%B7%E3%81%A8%E3%83%90%E3%83%83%E3%82%AF%E3%82%A2%E3%83%83%E3%83%97.pdf)
+- [ラボ10: データ保護を実装する](lab10.md)
+
+## 監視
+
 - Azure Monitor を構成する
 - Azure アラートを構成する
 - Log Analytics の構成
 - Network Watcher を構成する
-- ラボ10: データ保護を実装する
-- ラボ11: モニタリングを実装する
+- [ラボ11: モニタリングを実装する](lab11.md)
