--- a/AZ-104-2023/lp05.md
+++ b/AZ-104-2023/lp05.md
@@ -6,6 +6,9 @@
   - [PDF資料: ハブ&スポーク](../network/%E3%83%8F%E3%83%96%E3%83%BB%E3%82%B9%E3%83%9D%E3%83%BC%E3%82%AF.pdf)
   - [PDF資料: 仮想ネットワークの概要](pdf/%E4%BB%AE%E6%83%B3%E3%83%8D%E3%83%83%E3%83%88%E3%83%AF%E3%83%BC%E3%82%AF%E3%81%AE%E6%A6%82%E8%A6%81.pdf)
   - [Azure DNS/Azure Firewall](../AZ-104/lp5.md)
+  - Azure DNS
+    - パブリックDNSゾーン
+    - プライベートDNSゾーン
   - [ラボ4: バーチャル ネットワークを実装する](lab04.md)
   - [ラボ5: サイト間の接続性 を実装する](lab05.md)
 - オンプレミスとの接続
