--- a/AZ-104-2023/lp05.md
+++ b/AZ-104-2023/lp05.md
@@ -5,17 +5,14 @@
 - 仮想ネットワーク
   - [PDF資料: ハブ&スポーク](../network/%E3%83%8F%E3%83%96%E3%83%BB%E3%82%B9%E3%83%9D%E3%83%BC%E3%82%AF.pdf)
   - [PDF資料: 仮想ネットワークの概要](pdf/%E4%BB%AE%E6%83%B3%E3%83%8D%E3%83%83%E3%83%88%E3%83%AF%E3%83%BC%E3%82%AF%E3%81%AE%E6%A6%82%E8%A6%81.pdf)
-  - [Azure DNS/Azure Firewall](../AZ-104/lp5.md)
-  - Azure DNS
-    - パブリックDNSゾーン
-    - プライベートDNSゾーン
   - [ラボ4: バーチャル ネットワークを実装する](lab04.md)
-  - [ラボ5: サイト間の接続性 を実装する](lab05.md)
 - オンプレミスとの接続
-  - Azure VPN Gateway を構成する
-  - Azure ExpressRoute や Virtual WAN を構成する
+  - [VPN（モジュール6）](../AZ-303/mod03-03-vpn.md)
+  - [ExpressRoute（モジュール7）](../AZ-500/pdf/mod2/ExpressRouteまとめ.pdf)
+  - [Virtual WAN（モジュール7）](mod05-04-virtualwan.md)
+  - [ラボ5: サイト間の接続性 を実装する](lab05.md)
 - ルーティング/負荷分散
-  - ネットワーク ルーティングとエンドポイントを構成する
-  - Azure Load Balancer
-  - Azure Application Gateway
+  - [PDF資料: Azureの負荷分散サービスのまとめ](pdf/Azure%E3%81%AE%E8%B2%A0%E8%8D%B7%E5%88%86%E6%95%A3%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9%E3%81%BE%E3%81%A8%E3%82%81.pdf)
+    - Azure Load Balancer
+    - Azure Application Gateway
   - [ラボ6: トラフィック管理を実装する](lab06.md)
