--- a/AZ-104-2023/lp06.md
+++ b/AZ-104-2023/lp06.md
@@ -2,16 +2,16 @@
 
 # ラーニングパス6
 
+## 監視
+
+- [メトリックとログ](../AZ-303/pdf/mod15/メトリックとログの例.pdf)
+- [Azure Monitor](pdf/mod11/Azure%20Monitor.pdf)
+- [Azure Log Analytics](pdf/mod11/Log%20Analytics.pdf)
+- [Network Watcher](pdf/mod11/Network%20Watcher.pdf)
+- [ラボ11: モニタリングを実装する](lab11.md)
+
 ## バックアップ
 
 - PDF資料: [バックアップセンター](../AZ-305/pdf/Azure%20Backup.pdf)
 - PDF資料: [Azureのバックアップ](../AZ-104/pdf/mod10/%E3%83%87%E3%83%BC%E3%82%BF%E4%BF%9D%E8%AD%B7%E3%81%A8%E3%83%90%E3%83%83%E3%82%AF%E3%82%A2%E3%83%83%E3%83%97.pdf)
 - [ラボ10: データ保護を実装する](lab10.md)
-
-## 監視
-
-- Azure Monitor を構成する
-- Azure アラートを構成する
-- Log Analytics の構成
-- Network Watcher を構成する
-- [ラボ11: モニタリングを実装する](lab11.md)
