--- a/AZ-104-2023/lp06.md
+++ b/AZ-104-2023/lp06.md
@@ -5,9 +5,9 @@
 ## 監視
 
 - [メトリックとログ](../AZ-303/pdf/mod15/メトリックとログの例.pdf)
-- [Azure Monitor](pdf/mod11/Azure%20Monitor.pdf)
-- [Azure Log Analytics](pdf/mod11/Log%20Analytics.pdf)
-- [Network Watcher](pdf/mod11/Network%20Watcher.pdf)
+- [Azure Monitor](../AZ-104/pdf/mod11/Azure%20Monitor.pdf)
+- [Log Analytics](../log-analytics/log-analytics.md)
+- [Network Watcher](../AZ-104/pdf/mod11/Network%20Watcher.pdf)
 - [ラボ11: モニタリングを実装する](lab11.md)
 
 ## バックアップ
