--- a/AI-102/lp02.md
+++ b/AI-102/lp02.md
@@ -7,7 +7,7 @@ https://learn.microsoft.com/ja-jp/training/paths/provision-manage-azure-cognitiv
 - Cognitive Servicesのリソースの作成
 - エンドポイントとキー
 - 言語サービスのリソースの作成
-- ラボ01 言語サービスを使用して言語を検出する
+- [ラボ01 言語サービスを使用して言語を検出する](lab01cs.md)
 
 ■[モジュール2 Cognitive Servicesの保護](lp02-m02.md)
 
@@ -15,13 +15,10 @@ https://learn.microsoft.com/ja-jp/training/paths/provision-manage-azure-cognitiv
   - キー認証
   - トークン認証
   - Azure Active Directory認証
+- [ラボ02 Cognitive Service + Key Vault](lab02cs.md)
 - ネットワーク アクセスの制限
   - サービスエンドポイント
   - プライベートエンドポイント
-
-<!--
-- [ラボ02 Cognitive Service + Key Vault](lab02.md)
--->
 
 ■モジュール3 Cognitive Servicesの監視
 
@@ -46,6 +43,8 @@ https://learn.microsoft.com/ja-jp/training/paths/provision-manage-azure-cognitiv
   - 解説資料: [Log Analytics](../log-analytics/log-analytics.md)
   - [参考サイト](https://blog.johtani.info/blog/2020/05/26/logging-azure-search-request/) ※このページは Cognitive Search についての解説だが、Cognitive Services と読み替えても良い
     - 利用状況を監視する方法はいろいろあるが、「診断設定」が一番手軽で便利。アプリに手を入れたりログを収集する仕組みを作り込む必要がない。
+
+[ラボ03 Cognitive Services を監視する](lab03cs.md)
 
 ■モジュール4 Cognitive Servicesのコンテナー対応
 
