--- a/AI-102/lp06.md
+++ b/AI-102/lp06.md
@@ -177,14 +177,7 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/ques
 
 ■ ラボ12
 
-
-日本語翻訳版の手順書
-https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/12-qna-maker.md
-
-英語版の手順書（ブラウザの翻訳機能で日本語化して閲覧できます）
-https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/12-qna-maker.md
-
-※どちらの手順書を使用しでも、英語のナレッジベースが構築される。質問と回答の文章は、英語となる。
+[ラボ12 質問応答ソリューションを作成する](lab12cs.md)
 
 ■補足
 
