--- a/AI-102/lp10.md
+++ b/AI-102/lp10.md
@@ -5,7 +5,6 @@ https://learn.microsoft.com/ja-jp/training/paths/extract-text-from-images-docume
 - モジュール1 Computer Vision サービスを使用して画像やドキュメント内のテキストを読み取る
 - モジュール2 Form Recognizer を使用してフォームからデータを抽出する
 
-
 ■光学式文字認識 (OCR Optical Character Recognition)
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/computer-vision/overview-ocr
@@ -28,28 +27,7 @@ https://learn.microsoft.com/ja-jp/azure/applied-ai-services/form-recognizer/over
 
 ファイル形式は画像やPDFなどに対応。
 
-■ラボ（オプション）手順書
+■ラボ
 
-- ラボ20 OCR
-  - [英語版](https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/20-ocr.md) [日本語翻訳版](https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/20-ocr.md)
-- ラボ21 Form Recognizer
-  - [英語版](https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/21-form-recognizer.md) [日本語版](https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/21-form-recognizer.md)
-
-<!--
-
-■ ラボ手順書
-
-英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
-https://github.com/MicrosoftLearning/AI-102-AIEngineer
-
-日本語翻訳版（若干古い可能性があります）
-https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp
-
-ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
-https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master.zip
-
-■ ラボの概要
-
-- ラボ20 OCR
-- ラボ21 カスタムフォーム
--->
+- [ラボ20 画像内のテキストの読み取り](lab20cs.md)
+- [ラボ21 フォームからのデータの抽出](lab21cs.md)
