--- a/AI-102/lp09.md
+++ b/AI-102/lp09.md
@@ -60,9 +60,10 @@ https://www.aist.go.jp/aist_j/magazine/20220615.html
 ■ ラボ
 
 - [ラボ15 Computer Vision を使用する画像の分析](lab15cs.md)
-- ※ラボ16: Face API: 現在リソースを作成できないためスキップします。
+- ラボ16: 現在のラボ環境では必要なリソースを作成できないためスキップします。
 - [ラボ17 Custom Vision を使用する画像の分類](lab17cs.md)
 - [ラボ18 Custom Vision を使用する画像内の物体の検出](lab18cs.md)
+- ラボ19: 現在のラボ環境では必要なリソースを作成できないためスキップします。
 
 
 <!--
