--- a/AI-102/lp02-m01.md
+++ b/AI-102/lp02-m01.md
@@ -298,7 +298,7 @@ Resource Name: 作成済みの「言語サービス」の名前を選択。
   - 「マルチサービスアカウント」リソース
 - Cognitive Servicesのリソースエンドポイントとキーについて確認しました。
 - Cognitive Servicesの「言語サービス」リソースを作りました
-- 「Language Studio」から「言語サービス」を利用しました(言語の特定)
+- 「Language Studio」から「言語サービス」を利用できることを確認しました(言語の特定)
 - Cognitive Servicesの「マルチサービスアカウント」リソースを作りました
 - C#プログラムから「マルチサービスアカウント」リソースを利用しました(言語の特定)
 
