--- a/AI-102/lp03.md
+++ b/AI-102/lp03.md
@@ -9,10 +9,12 @@ https://learn.microsoft.com/ja-jp/training/paths/process-translate-text-azure-co
   - 「キー フレーズ抽出」: テキスト内の重要な句はなにか？
   - 「感情分析」: テキストはポジティブか？ネガティブか？
   - 「固有表現認識(NER)」: テキストにどのような人・場所・組織などが含まれるか？
+  - ラボ5
 - Azure Cognitive Servicesの「翻訳サービス」について理解する。
   - テキスト翻訳: テキストを1文ずつ翻訳
   - ドキュメント変換: PDFなどのファイル形式を維持しつつ翻訳
   - カスタム翻訳: 業界固有の用語を反映した翻訳
+  - ラボ6
 
 ## モジュール1 言語サービスを使用してテキストから分析情報を抽出する
 
@@ -65,6 +67,16 @@ https://www.cloud-contactcenter.jp/blog/sentiment-analysis-in-business.html
 
 書かれた文章を読み取って、ポジティブな内容か・ネガティブな内容かを判定する分析方法。
 
+事例: ヤマトグループ様（ヤマトコンタクトサービス株式会社様）
+https://bi-online.jp/news/case/20210621
+
+＞お客様のダイレクトな意見が詰まっているVO（Voice of Customer お客様の応対とお客様の声）は、企業にとって宝の山ですが、膨大なテキストデータの中から「宝」を見つけ出すのは容易ではありません。
+
+＞同社では、VOC分析をメールによるお問い合わせのテキストデータを、キーワードなどを抽出するテキストマイニングツールに取り込み、集計・分析した結果を使ってExcelでレポートを作成していました。Excelによるレポートは、視覚的・直感的に判断することが難しいため、データ活用がしにくいことが課題となっていました。
+
+＞Text Analyticsで感情分析を行い、可視化。感情分析に関して高い有効性を確認できた
+
+<!--
 応用例: Azure DevOpsの「リリースパイプライン」の「ゲート」への応用
 
 ※参考資料: [Azure DevOpsの概要](../AZ-400/pdf/Azure%20DevOps%E3%81%AE%E6%A6%82%E8%A6%81.pdf)
@@ -89,12 +101,13 @@ Twitterハッシュタグを指定してツイートを集める(Logic Apps)
 ポジティブなツイートが多い場合は、特定機能をさらに広いユーザー範囲へとリリース
 （ネガティブなツイートが多い場合は、広いユーザー範囲へのリリースをストップさせる）
 ```
+-->
 
 ■エンティティ → 固有表現認識 （NER、Named Entity Recognition）
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/named-entity-recognition/overview
 
-テキスト内のエンティティを識別および分類できます。 たとえば、人、場所、組織、数量など。
+テキスト内のエンティティを識別および分類できます。 たとえば、人名、地名、組織、数量、日時など。
 
 ```
 I had a wonderful trip to Seattle last week.
@@ -104,9 +117,15 @@ Seattle (Location)
 last week (DateTime)
 ```
 
+検出したエンティティを使用して、高度な検索に活用することができる。
+
+また、検出したエンティティ（人名など）を置換することで匿名化を行う、などの活用も考えられる。
+
 ■エンティティ リンキング entity linking
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/entity-linking/overview
+
+テキストで見つかったエンティティを識別し、Wikipedia の詳細情報へのリンクを付与する。
 
 ```
 "先週シアトルに出かけました。"
