--- a/AI-102/lp04.md
+++ b/AI-102/lp04.md
@@ -7,7 +7,21 @@ https://learn.microsoft.com/ja-jp/training/paths/process-translate-speech-azure-
 - Azure Cognitive Servicesの「音声サービス」について理解する。
   - 「音声テキスト変換」: 音声をテキストに変換（文字起こし）
   - 「テキスト読み上げ」: テキストを音声に変換
+  - ラボ7/8
 
+## 音声サービスの事例紹介
+
+※Azureの事例ではないが、一般的に、AIによる音声サービスがどのように役立つかのご紹介
+
+https://www.nikkan.co.jp/releases/view/9483
+
+＞ AIアナウンサー「荒木 ゆい」は、約10万件の実際にアナウンサーが読んでいるニュース音声を当社が開発した人工知能エンジン「Spectee AI」で機械学習し、様々なニュースのシーンにおけるより人に近い自然な発音、アクセントやイントネーションを習得し、自動で原稿を読み上げるバーチャル・アナウンサーです。
+
+＞ AIアナウンサー「荒木 ゆい」は、テレビやラジオの報道現場だけでなく、ドキュメンタリーやバラエティ番組のナレーション、劇場や美術館などの館内放送、観光案内、結婚式やその他式典での司会など、今後様々なシーンでの活用を見込んでいます。
+
+https://prtimes.jp/main/html/rd/p/000000133.000016808.html
+
+＞ 【AIアナウンサーの災害活用】東日本大震災時には南三陸町で当時24歳の職員が、防災無線で避難を呼び掛け、最終的に津波にのまれて亡くなるというような悲劇もありました。災害発生時は、職員の方も被災者となり、安全な場所に避難する必要があります。AIアナウンサーの活用により、外部からの防災行政無線の放送や、ドローンを活用した避難誘導も可能になり、より安全な災害対応ができると考えます。
 
 ## モジュール1 音声サービスを使用して音声対応アプリを作成する
 
