--- a/AI-102/lp07.md
+++ b/AI-102/lp07.md
@@ -24,15 +24,15 @@ https://nlpcloud.com/ja/nlp-named-entity-recognition-ner-api.html
 
 ＞例えば、次のような文章があったとします。
 
-＞「JohnはGoogleのウェブ開発者です。」
+＞「John is a Web developer in Google」
 
-＞「John」を名前、「Web developer」を職種、「Google」を会社として自動検出。
+＞「John」を「人名」、「Web developer」を「職種」、「Google」を「会社」として自動検出。
 
 ■カスタムNERとは？
 
 [カスタムNER(Named Entity Recognition)](https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/custom-named-entity-recognition/overview)
 
-カスタム NER を使用すると、ユーザーはカスタム AI モデルを作成して、テキストから、業界固有のエンティティを抽出できます。
+カスタム NER を使用すると、ユーザーはカスタム AI モデルを作成して、テキストから、業界固有のエンティティを抽出できる。
 
 例えば、金融業界で扱われるテキストに現れる、契約日、契約者、借入金額、利息、事務手数料など。
 
