--- a/AI-102/lp12.md
+++ b/AI-102/lp12.md
@@ -5,6 +5,7 @@
 このラーニングパスでは以下の概要を学習します。
 
 - Azure OpenAI Serviceとは？
+- 「OpenAI」とは？
 - Azure OpenAI Serviceの「生成AIモデル」
 - 申請
 - 価格
@@ -22,12 +23,63 @@ https://azure.microsoft.com/ja-jp/products/cognitive-services/openai-service
 ドキュメント:
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/openai/overview
 
-一般提供開始のアナウンス(Blog記事):
+2023/1/23 一般提供開始のアナウンス(Blog記事):
 https://news.microsoft.com/ja-jp/2023/01/23/230123-general-availability-of-azure-openai-service-expands-access-to-large-advanced-ai-models-with-added-enterprise-benefits/
 
 Azure OpenAI Serviceは、「[OpenAI](https://openai.com/)」が開発している「GPT-4」「ChatGPT」「DALL-E2」「Codex」などのAPIを使用できるAzureのサービス。2023/1/16に一般提供が開始された。
 
-■Azure OpenAI Serviceの「生成AIモデル」
+■参考: 「OpenAI」について
+
+https://openai.com/
+
+「OpenAI」は、サンフランシスコのAI研究所。
+
+Microsoftの一部ではない。
+
+[Microsoftは、OpenAI との長期的なパートナーシップを結び、OpenAI に数十億ドル規模の投資を行っている。](https://news.microsoft.com/ja-jp/2023/01/25/230125-microsoftandopenaiextendpartnership/)
+
+「OpenAI」が開発・ホストするAIモデルは、「OpenAI」のAPIから利用できる。
+
+※2023/6/13 「OpenAI」が日本オフィス設立のため、[米Twitter日本法人の元代表、James Kondo氏](https://ja.wikipedia.org/wiki/%E8%BF%91%E8%97%A4%E6%AD%A3%E6%99%83%E3%82%B8%E3%82%A7%E3%83%BC%E3%83%A0%E3%82%B9)を採用
+https://bocek.co.jp/media/news/4953/
+
+※2023/5/26より、「OpenAI」公式のiPhone向け「ChatGPT」アプリが日本でも利用できるようになった
+https://forest.watch.impress.co.jp/docs/news/1503579.html
+
+■参考: 「OpenAI」のデータプライバシー
+
+https://openai.com/policies/privacy-policy
+
+ユーザーが入力した情報は、「OpenAI」により収集され、モデルをトレーニングするために利用される場合がある。
+
+2023/4/25 ChatGPTに、チャット履歴を保存しない機能が追加された。
+https://www.itmedia.co.jp/news/articles/2304/26/news075.html
+
+■「Azure OpenAI Service」と「OpenAI」の関係について
+
+「Azure OpenAI Service」は、Azureが提供するAIサービス。
+
+「OpenAI」が開発したAIモデルを、Azure上でホストし、利用者に提供している。
+
+「Azure OpenAI Service」がホストするAIモデルは、「Azure OpenAI Service」のAPIから利用できる。
+
+■Azure OpenAI Serviceのデータプライバシー
+
+https://learn.microsoft.com/ja-jp/legal/cognitive-services/openai/data-privacy
+
+Azure OpenAI Serviceに入力されるデータは、以下のように扱われる。
+
+- 他のAzure利用者には提供されない
+- OpenAI では利用されない
+- OpenAI モデルを改善するためには使用されない
+- Microsoft またはサードパーティの製品やサービスを改善するために使用されることはない
+- リソースで使用するために Azure OpenAI モデルを自動的に改善するためには使用されない
+- ユーザー向けに微調整された Azure OpenAI モデルは、そのユーザー専用に提供される
+- Azure OpenAI Serviceは Microsoft によって完全に管理されている。
+- Microsoft は Microsoft の Azure 環境で OpenAI モデルをホストしている。
+- 本サービスは OpenAI社 によって運営されるサービス (ChatGPT や OpenAI API など) と通信しない。
+
+■Azure OpenAI Serviceで利用可能な「生成AIモデル」
 
 - [GPT-4](https://openai.com/product/gpt-4): [大規模言語モデル](https://atmarkit.itmedia.co.jp/ait/articles/2303/13/news013.html)の一種。ChatGPT、DALL-E2、Codexなどのベースとなる。
 - [ChatGPT](https://openai.com/blog/chatgpt): AIチャットボット
@@ -84,7 +136,7 @@ ChatGPT
 
 ■Azure OpenAI Serviceの操作
 
-操作は以下の4つの方法で実行できる。[クイックスタートのページ](https://learn.microsoft.com/ja-jp/azure/cognitive-services/openai/quickstart?tabs=command-line&pivots=programming-language-studio)に、これらの開始方法が説明されている。
+操作は以下の方法で実行できる。[クイックスタートのページ](https://learn.microsoft.com/ja-jp/azure/cognitive-services/openai/quickstart?tabs=command-line&pivots=programming-language-studio)に、これらの開始方法が説明されている。
 
 - Azure OpenAI Studio
   - https://oai.azure.com/
@@ -93,6 +145,10 @@ ChatGPT
   - [Azure OpenAI client library for .NET](https://github.com/Azure/azure-sdk-for-net/tree/main/sdk/openai/Azure.AI.OpenAI)を使用
 - Python SDK
   - [OpenAI Python Library](https://github.com/openai/openai-python)を使用
+- Java SDK
+  - [Azure OpenAI client library for Java](https://learn.microsoft.com/en-us/java/api/overview/azure/ai-openai-readme)
+- JavaScript SDK
+  - [Azure OpenAI SDK for JavaScript](https://learn.microsoft.com/ja-jp/javascript/api/overview/azure/openai)
 - REST API
   - Azure OpenAI Serviceのエンドポイントに直接通信
 
@@ -110,6 +166,27 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/openai/how-to/managed
   - Azure OpenAI ServiceのAPI呼び出しの際に、Authorization ヘッダーに、アクセストークンを指定
 
 OpenAIと同様のAPIキー認証に加え、Azure AD認証も使用できるのがAzure OpenAI Serviceの特徴。APIキー漏洩のリスクを削減できる。またトークンを取得できるID（Azure OpenAI ServiceのAPIを呼び出せるID）をロールでコントロールできる。
+
+
+■Azure OpenAI on your data
+
+2023/6/19 パブリックプレビュー開始。
+https://techcommunity.microsoft.com/t5/ai-cognitive-services-blog/introducing-azure-openai-service-on-your-data-in-public-preview/ba-p/3847000
+
+ドキュメント:
+https://learn.microsoft.com/en-us/azure/cognitive-services/openai/concepts/use-your-data
+
+コーディングなしで、ChatGPT や GPT-4 などの OpenAI モデルに、ユーザー（企業）のドキュメントを取り込んで、そのドキュメントに基づいた回答を利用できるようになった。いわゆるエンタープライズサーチのAI対応版。
+
+これにより、社内の手続きやルールの確認、問い合わせなど行うAIの開発が簡単に実現できるようになった。
+
+Blob, Cognitive Searchインデックス、ローカルファイル（txt、md、html、Wordファイル、PowerPoint、PDFなど）に対応。
+
+参考:
+- https://zenn.dev/microsoft/articles/azure-openai-add-your-data
+- https://codezine.jp/article/detail/17931
+- https://www.qes.co.jp/media/open-ai/a297
+- https://www.itmedia.co.jp/news/articles/2306/20/news196.html
 
 ■このラーニングパスで学んだこと
 
