--- a/AI-102/lp11.md
+++ b/AI-102/lp11.md
@@ -154,4 +154,4 @@ https://learn.microsoft.com/ja-jp/azure/search/cognitive-search-concept-intro
 
 ■ラボ
 
-- [ラボ22 検索ソリューションの開発](lab22.md)
+- [ラボ22 検索ソリューションの開発](lab22cs.md)
