--- a/AI-102/lp05.md
+++ b/AI-102/lp05.md
@@ -107,7 +107,7 @@ https://language.cognitive.azure.com
 
 ■ ラボ
 
-[ラボ9 「会話言語理解(CLU)」リソースの作成＋アプリの作成](lab09cs.md)
+[ラボ9 「会話言語理解(CLU)」リソースの作成＋アプリの作成](lab09cs-bak.md)
 
 <!--
 以下のラボを連続して実行します。（ラボ10を実施するにはラボ09で作成するモデルが必要です）
