--- a/AI-102/lp01.md
+++ b/AI-102/lp01.md
@@ -72,27 +72,31 @@ https://learn.microsoft.com/ja-jp/training/modules/get-started-ai-fundamentals/1
 
 音声の認識、画像の認識、テキストの認識、音声の聞き取り、翻訳などを行える。
 
-AIは、機械学習モデルを利用して実装される（機械学習モデルは、AIの基盤となる）。
+AI（人工知能）は、機械学習モデルを利用して実装される（機械学習モデルは、AIの基盤となる）。
 
-■機械学習とAIは何が違うのか？
+■機械学習とAI（人工知能）は何が違うのか？
 
 https://azure.microsoft.com/ja-jp/resources/cloud-computing-dictionary/what-is-machine-learning-platform
 
-機械学習はAIの一部。
+機械学習はAI（人工知能）の一部とみなされる。
+
+https://www.soumu.go.jp/johotsusintokei/whitepaper/ja/r01/html/nd113210.html
+
+AI（人工知能）のうち、人間の「学習」に相当するしくみをコンピューター等で実現するもの。
 
 https://business.ntt-east.co.jp/content/cloudsolution/column-159.html
 
-AIをうまく機能させるための方法の1つが機械学習。
+AI（人工知能）をうまく機能させるための方法の1つが機械学習。
 
 https://cloud.google.com/learn/artificial-intelligence-vs-machine-learning?hl=ja
 
-- 人工知能: 人間の知能を模倣するもの
+- AI（人工知能）: 人間の知能を模倣するもの
 - 機械学習: モデルを使用して、データから予測を行うもの
 
 https://blogs.nvidia.co.jp/2016/08/09/whats-difference-artificial-intelligence-machine-learning-deep-learning-ai/
 
-- 人工知能: 1950年代に登場したアイデア
-- 機械学習: 1980年代に登場した技法。AIに含まれる。
+- AI（人工知能）: 1950年代に登場したアイデア
+- 機械学習: 1980年代に登場した技法。AI（人工知能）に含まれる。
 
 ■Azure Cognitive Serviceとは？
 
