--- a/AI-102/lp08.md
+++ b/AI-102/lp08.md
@@ -26,6 +26,13 @@ C#などのコードを使用して、ボットを作成するためのSDK(Softw
 
 具体的には`dotnet new echobot` といったコマンドで、.NETのボットのプロジェクトを作成する。すると、そのプロジェクトにBot Framework SDKのライブラリが追加される。
 
+■Bot Framework SDKの対応言語: C#とJavaScript
+
+https://learn.microsoft.com/ja-jp/azure/bot-service/what-is-new
+
+＞Python SDK と Java SDK は、2023 年 11 月に終了する最終的な長期サポートで廃止されます。 このリポジトリ内の重要なセキュリティとバグの修正のみが行われます。
+
+
 ■Bot Framework Emulator
 
 https://github.com/microsoft/BotFramework-Emulator
@@ -34,7 +41,7 @@ https://github.com/microsoft/BotFramework-Emulator
 
 ■ ラボ13
 
-- [ラボ13 チャットボット(TimeBot)の作成](lab13.md)
+- [ラボ13 チャットボット(TimeBot)の作成](lab13cs.md)
   - Bot Framework SDKを使用。
   - C#でコードを記述。
 
