--- a/AI-102/lp12.md
+++ b/AI-102/lp12.md
@@ -63,6 +63,10 @@ https://www.itmedia.co.jp/news/articles/2304/26/news075.html
 
 「Azure OpenAI Service」がホストするAIモデルは、「Azure OpenAI Service」のAPIから利用できる。
 
+■参考: 「Azure OpenAI Service」vs「OpenAI」
+
+https://twitter.com/ichi_eng/status/1659143283761889280
+
 ■Azure OpenAI Serviceのデータプライバシー
 
 https://learn.microsoft.com/ja-jp/legal/cognitive-services/openai/data-privacy
