--- a/AZ-104-2023/lp01.md
+++ b/AZ-104-2023/lp01.md
@@ -3,4 +3,4 @@
 # ラーニングパス1 Azure でのIDとガバナンスの管理
 
 - PDF資料: [Azure Active Directory (Azure AD)の基礎](pdf/Azure%20AD%E3%81%AE%E5%9F%BA%E7%A4%8E.pdf)
-- [ラボ1: Azure Active Directory ID を管理する](lab01.md)
+- [ラボ1: Azure Active Directory ID を管理する](lab01cs.md)
