--- a/AZ-104-2023/lp02.md
+++ b/AZ-104-2023/lp02.md
@@ -2,6 +2,19 @@
 
 # ラーニングパス2 Azure 管理者向けの前提条件
 
+- ツールを使用して Azure リソースを構成する
+  - [PDF資料: Azureの管理ツール](pdf/Azure%E3%81%AE%E7%AE%A1%E7%90%86%E3%83%84%E3%83%BC%E3%83%AB.pdf)
+    - Azure portal
+    - Azure Cloud Shell
+    - Azure PowerShell
+    - Azure CLI
+    - Azure Resource Manager (ARM)
+    - Azure Resource Manager (ARM) テンプレート
+  - 講師デモ: ディスクの操作
+  - [ラボ3a: Azure portal を使用して Azure リソースを管理する](lab03acs.md)
+  - [ラボ3b: ARM テンプレートを使用して Azure リソースを管理する](lab03bcs.md)
+  - [ラボ3c: Azure PowerShell を使用して Azure リソースを管理する](lab03ccs.md)
+  - [ラボ3d: Azure CLI を使用して Azure リソースを管理する](lab03dcs.md)
 - サブスクリプションの管理
   - [PDF資料: Azureリソースの管理](pdf/Azure%E3%81%AE%E3%83%AA%E3%82%BD%E3%83%BC%E3%82%B9%E7%AE%A1%E7%90%86.pdf)
     - 管理グループ
@@ -17,15 +30,3 @@
     - タグ付けを強制する
   - [ラボ2a: サブスクリプションと RBAC を管理する](lab02acs.md)
   - [ラボ2b: Azure Policy を介してガバナンスを管理する](lab02bcs.md)
-- ツールを使用して Azure リソースを構成する
-  - [PDF資料: Azureの管理ツール](pdf/Azure%E3%81%AE%E7%AE%A1%E7%90%86%E3%83%84%E3%83%BC%E3%83%AB.pdf)
-    - Azure portal
-    - Azure Cloud Shell
-    - Azure PowerShell
-    - Azure CLI
-    - Azure Resource Manager (ARM)
-    - Azure Resource Manager (ARM) テンプレート
-  - [ラボ3a: Azure portal を使用して Azure リソースを管理する](lab03acs.md)
-  - [ラボ3b: ARM テンプレートを使用して Azure リソースを管理する](lab03bcs.md)
-  - [ラボ3c: Azure PowerShell を使用して Azure リソースを管理する](lab03ccs.md)
-  - [ラボ3d: Azure CLI を使用して Azure リソースを管理する](lab03dcs.md)
