--- a/AZ-104-2023/lp04.md
+++ b/AZ-104-2023/lp04.md
@@ -9,16 +9,16 @@
   - [PDF資料: 可用性ゾーンと可用性セット](pdf/%E5%8F%AF%E7%94%A8%E6%80%A7%E3%82%BE%E3%83%BC%E3%83%B3%E3%83%BB%E5%8F%AF%E7%94%A8%E6%80%A7%E3%82%BB%E3%83%83%E3%83%88.pdf)
   - 講師デモ
     - 仮想マシン拡張機能を構成する
-  - [ラボ8: 仮想マシンの管理](lab08.md)
+  - [ラボ8: 仮想マシンと仮想マシンスケールセットの管理](lab08cs.md)
 
 ## PaaS
 
 - PaaS
   - [PDF資料: Azure App Service](pdf/Azure%20App%20Service.pdf)
-  - [ラボ9a: Web Apps の実装](lab09a.md)
+  - [ラボ9a: Web Apps の実装](lab09acs.md)
 
 ## コンテナー
 
 - [PDF資料: コンテナーのサービス](pdf/%E3%82%B3%E3%83%B3%E3%83%86%E3%83%8A%E3%83%BC%E3%81%AE%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9.pdf)
-- [ラボ9b: Azure Container Instancesの実装](lab09b.md)
-- [ラボ9c: Azure Kubernetes Service を実装する](lab09c.md)
+- [ラボ9b: Azure Container Instancesの実装](lab09bcs.md)
+- [ラボ9c: Azure Kubernetes Service を実装する](lab09ccs.md)
