--- a/AZ-305/m09.md
+++ b/AZ-305/m09.md
@@ -14,7 +14,8 @@
 
 ■アプリケーション配信(負荷分散)
 
-[PDF: 負荷分散サービスのまとめ](../AZ-500/pdf/mod2/負荷分散サービス.pdf)
+- [PDF: 負荷分散サービスのまとめ](../AZ-104-2023/pdf/Azureの負荷分散サービスまとめ.pdf)
+- [PDF: 負荷分散サービスの一覧表](../AZ-500/pdf/mod2/負荷分散サービス.pdf)
 
 リージョン内の負荷分散:
 
@@ -22,6 +23,9 @@
   - L4(TCP/UDP)
 - [Azure Application Gateway](../AZ-303/mod05-02-appgw.md)
   - L7(Web用)
+  - [フロントエンドとしてパブリックIPとプライベートIPが利用できる](https://learn.microsoft.com/ja-jp/azure/application-gateway/configuration-frontend-ip)
+  - 2023/4/4 [プライベートIPのみのApplication Gateway preview](https://azure.microsoft.com/en-us/updates/public-preview-private-application-gateway-v2/)
+  - [Application Gateway V1は2026/4/28に廃止予定。移行スクリプトが利用可能。](https://azure.microsoft.com/ja-jp/updates/application-gateway-v1-will-be-retired-on-28-april-2026-transition-to-application-gateway-v2/)
 
 リージョン間の負荷分散:
 
@@ -39,7 +43,12 @@
 - [Azure DDos Protection](../network/ddos-protection.md)
 - [ネットワークセキュリティグループ(NSG) / アプリケーションセキュリティグループ(ASG)](../AZ-303/mod05-05-nsg-asg.md)
 - [Azure Firewall](../AZ-303/mod05-06-azure-firewall.md)
-  - [NSGとAzure Firwallの違い](https://jpaztech.github.io/blog/network/difference-nsg-fw/#NSG-%E3%81%A8-Azure-Firewall-%E3%81%AE%E6%A9%9F%E8%83%BD%E6%AF%94%E8%BC%83)
+  - [PDFまとめ](../AZ-104-2023/pdf/仮想ネットワークの概要.pdf)
+  - [NSGとAzure Firewallの違い](https://jpaztech.github.io/blog/network/difference-nsg-fw/#NSG-%E3%81%A8-Azure-Firewall-%E3%81%AE%E6%A9%9F%E8%83%BD%E6%AF%94%E8%BC%83)
+
+■大規模なネットワークの管理
+
+- [Virtual WAN (Azureドキュメント)](https://learn.microsoft.com/ja-jp/azure/virtual-wan/virtual-wan-about)
 
 知識チェック:
 
