--- a/AZ-104-2023/lp04.md
+++ b/AZ-104-2023/lp04.md
@@ -21,4 +21,7 @@
 
 - [PDF資料: コンテナーのサービス](pdf/%E3%82%B3%E3%83%B3%E3%83%86%E3%83%8A%E3%83%BC%E3%81%AE%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9.pdf)
 - [ラボ9b: Azure Container Instancesの実装](lab09bcs.md)
+
+※ラボ9cは現在ラボの問題により実施ができません。スキップしてください。ご参考として動画はご確認いただけます。2023/8/6
+
 - [ラボ9c: Azure Kubernetes Service を実装する](lab09ccs.md)
