--- a/AZ-104-2023/lp04.md
+++ b/AZ-104-2023/lp04.md
@@ -6,6 +6,7 @@
 
 - 仮想マシン
   - [PDF資料: 仮想マシンと仮想マシンスケールセット](pdf/vm%E3%81%A8vmss.pdf)
+  - [可用性のインフォグラフィック](https://azure.microsoft.com/mediahandler/files/resourcefiles/infographic-reliability-with-microsoft-azure/InfographicRC2.pdf)
   - [PDF資料: 可用性ゾーンと可用性セット](pdf/%E5%8F%AF%E7%94%A8%E6%80%A7%E3%82%BE%E3%83%BC%E3%83%B3%E3%83%BB%E5%8F%AF%E7%94%A8%E6%80%A7%E3%82%BB%E3%83%83%E3%83%88.pdf)
   - 講師デモ
     - 仮想マシン拡張機能を構成する
