--- a/AI-050/m01.md
+++ b/AI-050/m01.md
@@ -2,3 +2,31 @@
 
 
 https://learn.microsoft.com/ja-jp/training/modules/explore-azure-openai/
+
+
+■生成AI(Generative AI)とは
+
+https://www.microsoft.com/ja-jp/startups/ai
+
+人工知能が自動的にテキストや画像などのコンテンツを生成する技術。
+
+■大規模言語モデルとは
+
+LLM
+
+■Azure OpenAI Serviceとは
+
+https://learn.microsoft.com/ja-JP/azure/ai-services/openai/overview
+
+■Azure OpenAI Serviceの機能(1)自然言語生成
+
+■Azure OpenAI Serviceの機能(2)コード生成
+
+■Azure OpenAI Serviceの機能(3)イメージ生成
+
+■「責任ある AI」原則とは
+
+https://learn.microsoft.com/ja-jp/azure/machine-learning/concept-responsible-ai
+
+(Responsible AI principles)
+
