--- a/AI-050/m02.md
+++ b/AI-050/m02.md
@@ -1,3 +1,38 @@
 # モジュール2: Azure OpenAI Service で作業を開始する
 
 https://learn.microsoft.com/ja-jp/training/modules/get-started-openai/
+
+■Azure OpenAI Studioを利用する手順
+
+- リソースの作成
+- モデルのデプロイ
+- モデルを利用する
+  - Azure OpenAI Studioから
+  - 独自のアプリから
+
+■モデルの種類
+
+- GPT-4
+- GPT 3.5
+- Embedded
+- DALL-E
+
+■モデルの詳細
+
+- gpt-35-turbo-16k
+  - OpenAIが開発した大規模な言語モデルの一種。
+  - 最大16,384個のトークン(テキストを分割した単位)を入力として受け付け可能
+  - 日本語では約15,000文字程度に相当
+
+■Azure OpenAI Studioとは
+
+■プレイグラウンド
+
+プレイグラウンドは、Azure OpenAI Studio のインターフェイスであり、独自のクライアント アプリケーションを開発することなく、デプロイされるモデルを実験するために使用できます。
+
+■トークン
+
+Tokens are the basic units of a prompt - essentially words or word-parts in the text.
+
+- パラメーター
+  - 温度
