--- a/AI-050/m03.md
+++ b/AI-050/m03.md
@@ -2,3 +2,19 @@
 
 https://learn.microsoft.com/ja-jp/training/modules/build-language-solution-azure-openai/
 
+■Azure OpenAI Serviceの「REST APIエンドポイント」
+
+- Completion
+- ChatCompletion
+- Embeddings
+
+■APIキー
+
+■APIの利用(1)curlコマンド
+
+■APIの利用(2)SDK
+
+- C#
+- Python
+
+
