--- a/AI-050/m04.md
+++ b/AI-050/m04.md
@@ -1,3 +1,25 @@
 # モジュール4: Azure OpenAI Service を使用してプロンプト エンジニアリングを適用する
 
 https://learn.microsoft.com/ja-jp/training/modules/apply-prompt-engineering-azure-openai/
+
+■プロンプトエンジニアリングとは
+
+LLM をより適切に活用するようにプロンプトを設計し、最適化するプロセス。
+
+■プロンプトエンジニアリングの手法
+
+https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/advanced-prompt-engineering
+
+- 指示(Provide clear instructions)
+- 書式(Format of instructions)
+  - セクションマーカー
+- プライマリ/サポート/基礎コンテンツ(Primary, supporting, and grounding content)
+- キュー(Cues)
+
+■精度を高めるようにコンテキストを提供する
+
+- システムメッセージ(System message)
+- 会話履歴
+- フューショット学習(Few-shot learning)
+- タスクの分割(Break the task down)
+- 思考の連鎖(Chain of thought prompting)
