--- a/AI-050/m03.md
+++ b/AI-050/m03.md
@@ -14,7 +14,11 @@ https://learn.microsoft.com/ja-jp/training/modules/build-language-solution-azure
 
 ■APIの利用(2)SDK
 
-- C#
-- Python
+- .NET (C#/F#/Visual Basic): Azure OpenAI クライアント ライブラリ
+  - [.NET SDK Azure.AI.OpenAI NET 用 Azure OpenAI クライアント ライブラリ](https://learn.microsoft.com/ja-jp/dotnet/api/overview/azure/ai.openai-readme)
+  - [NuGetパッケージ Azure.AI.OpenAI](https://www.nuget.org/packages/Azure.AI.OpenAI)
+- Python: OpenAI Python Library
+  - [OpenAI Python Library の GitHubリポジトリ](https://github.com/openai/openai-python)
+  - [PyPI の OpenAI Python Libraryのページ](https://pypi.org/project/openai/)
 
 
