--- a/AI-050/m02.md
+++ b/AI-050/m02.md
@@ -34,5 +34,9 @@ https://learn.microsoft.com/ja-jp/training/modules/get-started-openai/
 
 Tokens are the basic units of a prompt - essentially words or word-parts in the text.
 
+以下のサイトで、テキストを入力し、そのトークン数を計算できる。
+https://platform.openai.com/tokenizer
+
+
 - パラメーター
   - 温度
