--- a/AI-050/m01.md
+++ b/AI-050/m01.md
@@ -3,30 +3,250 @@
 
 https://learn.microsoft.com/ja-jp/training/modules/explore-azure-openai/
 
+- Azure OpenAI ワークロードについて説明し、Azure OpenAI Service にアクセスする
+- 生成 AI モデルについて理解する
+- Azure OpenAI の言語、コード、イメージの機能について理解する
+- Azure OpenAI の責任ある AI プラクティスと制限付きアクセス ポリシーについて理解する
 
-■生成AI(Generative AI)とは
+■機械学習（マシンラーニング）とは？
+
+Microsoftの機械学習の解説ページ:
+https://azure.microsoft.com/ja-jp/resources/cloud-computing-dictionary/what-is-machine-learning-platform
+
+大量のデータをコンピューターに与えて学習させ、データの分類や判断、予測などを行えるようにすること。
+
+たとえば、大量の「犬の画像」と「猫の画像」をコンピューターに学習させることで、犬と猫の画像を認識することができる「機械学習モデル」を構築する（トレーニング）。
+
+構築した「機械学習モデル」に、新しい画像データを与えると、「犬」「猫」といったように画像の分類や認識ができるようになる。
+
+```
+ユーザー
+↓画像データ↑判定結果
+トレーニング済みの「機械学習モデル」
+```
+
+機械学習を活用できる範囲は多岐にわたる。
+
+- 金融: 不正行為の検出
+- 運輸: 配達ルートの最適化、自動運転
+- 医療: 病気の診断
+- 農業: 田畑の監視
+- その他: 音声の文字起こし、画像の判定など
+
+対応するAzureサービス: Azure Machine Learning
+
+※コース「[DP-100: Azure でのデータ サイエンス ソリューションの設計と実装](https://learn.microsoft.com/ja-jp/training/courses/dp-100t01)」で、機械学習の詳細について学ぶことができる。
+
+■Azure Machine Learningとは？
+
+公式サイト:
+https://azure.microsoft.com/ja-jp/products/machine-learning
+
+ドキュメント:
+https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/6-understand-capabilities-of-azure-machine-learning
+
+「機械学習モデル」のトレーニング、デプロイ、管理、監視のためのクラウド プラットフォーム。
+
+独自の「機械学習モデル」を構築したい場合に使用する。
+
+■AI（人工知能）とは？
+
+https://learn.microsoft.com/ja-jp/training/modules/get-started-ai-fundamentals/1-introduction
+
+人間の行動と能力を模倣するソフトウェア。
+
+人の持つ判断・認知・情報処理の一部をコンピューターで実現するもの。
+
+音声の認識、画像の認識、テキストの認識、音声の聞き取り、翻訳などを行える。
+
+AI（人工知能）は、機械学習モデルを利用して実装される（機械学習モデルは、AIの基盤となる）。
+
+■機械学習とAI（人工知能）は何が違うのか？
+
+https://azure.microsoft.com/ja-jp/resources/cloud-computing-dictionary/what-is-machine-learning-platform
+
+機械学習はAI（人工知能）の一部とみなされる。
+
+https://www.soumu.go.jp/johotsusintokei/whitepaper/ja/r01/html/nd113210.html
+
+AI（人工知能）のうち、人間の「学習」に相当するしくみをコンピューター等で実現するもの。
+
+https://business.ntt-east.co.jp/content/cloudsolution/column-159.html
+
+AI（人工知能）をうまく機能させるための方法の1つが機械学習。
+
+https://cloud.google.com/learn/artificial-intelligence-vs-machine-learning?hl=ja
+
+- AI（人工知能）: 人間の知能を模倣するもの
+- 機械学習: モデルを使用して、データから予測を行うもの
+
+https://blogs.nvidia.co.jp/2016/08/09/whats-difference-artificial-intelligence-machine-learning-deep-learning-ai/
+
+- AI（人工知能）: 1950年代に登場したアイデア
+- 機械学習: 1980年代に登場した技法。AI（人工知能）に含まれる。
+
+■生成AI(Generative AI)とは？
 
 https://www.microsoft.com/ja-jp/startups/ai
 
 人工知能が自動的にテキストや画像などのコンテンツを生成する技術。
 
-■大規模言語モデルとは
+https://www.nri.com/jp/knowledge/glossary/lst/sa/generative_ai
 
-LLM
+＞生成AI（または生成系AI）とは、「Generative AI：ジェネレーティブAI」とも呼ばれ、さまざまなコンテンツを生成できるAIのことです。従来のAIが決められた行為の自動化が目的であるのに対し、生成AIはデータのパターンや関係を学習し、新しいコンテンツを生成することを目的としています。
 
-■Azure OpenAI Serviceとは
+生成AIは、「大規模言語モデル（Large Language Models、LLM）」を使用して作られている。
+
+■生成AIでは何ができるのか？
+
+https://platform.openai.com/examples
+
+- 文章の生成
+- 文章の要約
+- 質問への回答
+- 製品名（案）の生成
+- 計画の生成
+- 文章を文法的に修正
+- プログラムコードの生成、修正
+- SQL文の生成
+- 表の生成
+- 文章からのキーワードの抽出
+- 翻訳
+- 絵文字の生成
+- 感情分析
+
+■大規模言語モデル（Large Language Models、LLM）とは？
+
+大量のテキストデータを学習して、自然言語を生成したり理解したりすることができる、人工知能の一種。
+
+- 大規模言語モデルは、インターネット上のウェブページや書籍やニュース記事など、何百億もの単語からなるテキストデータを、数千台のコンピュータで数ヶ月かけて学習して構築される。
+- 大規模言語モデルは、学習したテキストデータに含まれる知識や文法や文脈などをもとに、自然言語を生成したり理解したりすることができる。例えば、「東京の天気は？」という質問に対して、「今日は晴れて暑いです」という回答を生成できる。
+- 大規模言語モデルは、様々な応用分野に利用される。例えば、検索エンジンやチャットボットや文章校正や機械翻訳などのサービスにおいて、大規模言語モデルがユーザーの入力に対して適切な出力を生成することで、より高度な自然言語処理を実現する。
+- 大規模言語モデルは、まだ発展途上の技術であり、多くの課題や限界がある。学習したテキストデータに偏りや誤りがあると、大規模言語モデルもそれを反映してしまう。大規模言語モデルは、現状、テキスト以外の情報（音声や画像や動画など）を扱うことが苦手である。大規模言語モデルは、自分が生成した言語の意味や目的や影響を十分に理解していないことが多く、人間の常識や倫理に反する場合がある。
+
+■Azure OpenAI Serviceとは？
 
 https://learn.microsoft.com/ja-JP/azure/ai-services/openai/overview
 
+- OpenAIの大規模言語モデルをサービスとして提供
+- Azure内で実行される
+- Azureのセキュリティ機能が利用できる
+  - Azure AD認証＋ロールによる承認
+  - 暗号化
+  - プライベートエンドポイント
+
+■参考:「Azure OpenAI Service」と「Azure Cognitive Services」の関係は？
+
+「Azure Cognitive Services」（コグニティブ サービス）は、画像処理・音声処理・自然言語処理などの「AIパーツ」を提供するサービス。
+
+「Azure OpenAI Service」は「Azure Cognitive Services」の一部。
+
+2023/7以降、「Azure Cognitive Services」という名前はなくなった。AzureのAIサービスはすべて「Azure AI Services」としてまとめられた。
+
+現在「Azure OpenAI Service」は「Azure AI Services」の一部となっている。
+
+```
+Azureのサービス
+├Azure Cognitive Services
+│├画像処理(computer vision)
+│├音声処理(speech)
+│├自然言語処理(NLP)
+│└Azure OpenAI Service
+└Azure Applied AI Services
+  ├Azure Cognitive Search
+  └...
+```
+
+↓2023/7以降
+
+```
+Azureのサービス
+└Azure AI Services
+  ├Azure OpenAI Service
+  ├画像処理(computer vision)
+  ├音声処理(speech)
+  ├自然言語処理(NLP)
+  └...
+```
+
+■Azure OpenAI Serviceに入力したデータはどのように扱われるのか？
+
+https://learn.microsoft.com/ja-jp/legal/cognitive-services/openai/data-privacy
+
+ユーザーが入力したデータは、
+- Azureの環境で処理される。OpenAI社には提供されない。
+- モデルのトレーニングや、Microsoftのサービスの改善には利用されない。
+- 他のAzureユーザーはアクセスできない。
+- 使用条件に違反する使用（悪用）を監視するために、Azure OpenAI はすべてのプロンプトと生成されたコンテンツを最大 30 日間保存する。
+- データの保存時は、デフォルトでは、Microsoftが管理する暗号化キーを使用して暗号化される。
+  - オプションで、ユーザーが管理する暗号化キーを使用して2重に暗号化することもできる。
+
+■参考: Azure OpenAI Serviceで「やってはいけないこと」
+
+https://learn.microsoft.com/ja-jp/legal/cognitive-services/openai/code-of-conduct?context=%2Fazure%2Fai-services%2Fopenai%2Fcontext%2Fcontext#integrations-with-azure-openai-service-must-not
+
+- 法律、規制、政府命令、政令で禁止されている使用、または他者の権利を侵害する使用など。
+- ヘイトスピーチ・差別・いやがらせ・詐欺・テロ・暴力に関するコンテンツ生成、マルウェアの生成など。
+
+不正使用監視の詳細:
+https://learn.microsoft.com/ja-jp/azure/ai-services/openai/concepts/abuse-monitoring
+
+
 ■Azure OpenAI Serviceの機能(1)自然言語生成
+
+- コンテンツの生成
+- 質問への回答の生成
+- 文章の要約
+- 翻訳
 
 ■Azure OpenAI Serviceの機能(2)コード生成
 
-■Azure OpenAI Serviceの機能(3)イメージ生成
+- C#、Python、Java、JavaScriptなど、さまざまなプログラミング言語のコードを生成
 
-■「責任ある AI」原則とは
+■Azure OpenAI Serviceの機能(3)画像生成
 
+- 入力された文章から、画像を生成
+
+■「責任ある AI 原則」 (Responsible AI principles)とは
+
+公式サイト:
+https://www.microsoft.com/ja-jp/ai/responsible-ai
+
+ドキュメント:
 https://learn.microsoft.com/ja-jp/azure/machine-learning/concept-responsible-ai
 
-(Responsible AI principles)
+Microsoft では、「責任ある AI」という考え方を採用している。主なもの:
 
+- AIシステムではすべての人を公平に扱う必要がある。
+  - 性別、民族などで差別をしない。
+- AIシステムが、安全かつ確実に実行されるようにする。
+  - 自動運転などでは安全性が極めて重要である。
+- AIシステムが、プライバシーを尊重する必要がある。
+  - AIに入力されたデータのプライバシーを守る。
+
+Microsoft のAIサービスを利用するユーザーにも、Microsoftの「責任ある AI」の考え方に同意し、条件に従ってAIサービスを利用することを求めている。たとえば、Azure Cognitive ServiceやAzure Open AI Serviceのリソースを作成する際に、条件への「同意」を行う必要がある。
+
+■「透明性ノート」（transparency-note）
+
+※「透過性に関するメモ」、「わかりやすさに関するメモ」などとも
+
+https://learn.microsoft.com/ja-jp/legal/cognitive-services/openai/transparency-note
+
+- 「透明性ノート」は、「責任ある AI 原則」を実践するための Microsoft の広範な取り組みの一環。
+- Microsoft の AI テクノロジがどのように機能するか、システムのパフォーマンスと動作に影響を与えるシステム所有者が行う選択、テクノロジ、人材、環境を含むシステム全体について考えることの重要性を理解するのに役立つ文書。
+- AIテクノロジがどのように構築されているか、どのようなことができるか、考慮事項、制限事項、ベストプラクティスなどが記載されている。
+- 独自のシステムを開発または展開するときに透明性ノートを使用したり、システムを使用する人やシステムの影響を受ける人たちと透明性ノートを共有したりできる
+
+■知識チェック
+
+https://learn.microsoft.com/ja-jp/training/modules/explore-azure-openai/9-knowledge-check
+
+- 第1問: ChatGPT、OpenAI、Azure OpenAI はどのように関連していますか?
+  - OpenAI: 生成 AI モデルを使用するチャットボットである ChatGPT を開発した研究所。
+  - ChatGPT: OpenAIが提供する、GPTを使用したチャットのサービス。
+  - Azure OpenAI: Microsoftが提供するAIサービス。OpenAI の AI モデルの多くにアクセスできる。
+- 第2問: あなたはテキストの段落を要約しようとしています。 このワークロードの解決には、どの生成 AI モデル ファミリを使用しますか?
+  - GPT
+- 第3問: Azure OpenAI で倫理的 AI プラクティスをサポートするために Microsoft が行っている 1 つのアクションとは何ですか?
+  - MicrosoftはAIのサービスに対する「透明性ノート」（transparency-note）を提供している。
+  - テクノロジがどのように構築されているかについて伝え、その影響を考慮するようユーザーに求めている。
