--- a/AI-050/m02.md
+++ b/AI-050/m02.md
@@ -4,8 +4,11 @@ https://learn.microsoft.com/ja-jp/training/modules/get-started-openai/
 
 ■Azure OpenAI Studioを利用する手順
 
-- リソースの作成
-- モデルのデプロイ
+- Azure OpenAI Serviceの利用を申請する
+  - https://aka.ms/oaiapply
+- 申請が承認されるまで待つ
+- Azure OpenAI Serviceリソースを作成する
+- モデルをデプロイする
 - モデルを利用する
   - Azure OpenAI Studioから
   - 独自のアプリから
@@ -26,9 +29,14 @@ https://learn.microsoft.com/ja-jp/training/modules/get-started-openai/
 
 ■Azure OpenAI Studioとは
 
+Azure OpenAI Service を操作するためのWeb管理画面。
+
+https://oai.azure.com
+
 ■プレイグラウンド
 
-プレイグラウンドは、Azure OpenAI Studio のインターフェイスであり、独自のクライアント アプリケーションを開発することなく、デプロイされるモデルを実験するために使用できます。
+- Azure OpenAI Studio のインターフェイス
+- 独自のクライアント アプリケーションを開発することなく、デプロイされるモデルを実験するために使用できる
 
 ■トークン
 
@@ -37,6 +45,36 @@ Tokens are the basic units of a prompt - essentially words or word-parts in the 
 以下のサイトで、テキストを入力し、そのトークン数を計算できる。
 https://platform.openai.com/tokenizer
 
+■トークナイズ
 
-- パラメーター
-  - 温度
+https://cardinal-moon.hatenablog.com/entry/tokenize_and_subword
+
+文章をトークンに分割すること。
+
+```
+私は日本人です。
+↓
+私/は/日本人/です/。
+```
+
+■サブワード分割（サブワード正則化）
+
+ChatGPTにおけるサブワード分割とは、テキストを分割する単位のことです。
+サブワード分割は、ニューラル言語処理の分野で広く使われている手法であり、機械翻訳や自然言語生成などに応用されています¹。
+サブワード分割には、Byte Pair Encoding (BPE) やユニグラム言語モデルなどのアルゴリズムがあります²。
+これらのアルゴリズムは、データ圧縮に基づいて、頻出する文字列や単語をトークンとして扱います³。
+このようにして、テキストの長さを短くし、語彙数を減らすことができます⁴。
+
+■BPE（Byte Pair Encoding）
+
+ChatGPTは、Byte Pair Encoding (BPE) というアルゴリズムでトークンを生成しており、頻出する文字列や単語をトークンとして扱います²。
+
+BPEとは、Byte Pair Encodingの略で、テキストを圧縮するアルゴリズムの一種です¹。BPEでは、テキストをバイト単位で分割し、最も頻出するバイトのペアを新しいバイトに置き換えていきます²。このようにして、テキストの長さを短くし、語彙数を減らすことができます³。
+
+ChatGPTでは、BPEを用いてテキストをトークンに変換しています⁴。トークンとは、テキストを分割する単位のことで、文字や単語の一部などがトークンになります¹。BPEによってトークン化されたテキストは、ChatGPTのモデルに入力されて処理されます⁴。
+
+ChatGPTでは、BPEというアルゴリズムでトークンを生成しています⁵。BPEでは、テキストをバイト単位で分割し、最も頻出するバイトのペアを新しいバイトに置き換えていきます⁶。例えば、「こんにちは」というテキストは、2つのトークンに分割されます。`こんにちは` -> `こんにちは` + `</s>`。`</s>`は文末を表す特殊なトークンです。一方、「Hello」というテキストは、5つのトークンに分割されます。`Hello` -> `H` + `el` + `lo` + `!` + `</s>`。このように、英語の場合は文字や単語の一部がトークンになることがあります。
+
+■パラメーター
+
+■温度（temperature）
