--- a/AI-102/lp01.md
+++ b/AI-102/lp01.md
@@ -163,7 +163,7 @@ Cognitive Serviceアカウント
 
 → 詳しくは後ほど [ラーニングパス12](lp12.md) で解説。
 
-※本コース「AI-102」では、Azure OpenAI Serviceの概要のみ解説する。現在、このサービスを集中的に学習できる（ハンズオンが含まれる）Microsoftの公式トレーニングコースは提供されていない。
+※本コース「AI-102」では、Azure OpenAI Serviceの概要のみ解説する。Azure OpenAI Serviceについては「AI-050」コースで解説。
 
 ■Azure Bot Serviceとは？
 
